# ChangeLog for dev-python/json-tools
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/json-tools/ChangeLog,v 1.1 2013/10/10 22:23:34 radhermit Exp $

*json-tools-0.3.2 (10 Oct 2013)

  10 Oct 2013; Tim Harder <radhermit@gentoo.org> +json-tools-0.3.2.ebuild,
  +metadata.xml:
  Initial import, ebuild by E.G. Galano (bug #487554).
