@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST json_tools-0.3.2.tar.gz 8922 SHA256 246f287787582c206bf31a5a01bb823c0daaa979753d711c71bbf6f4d597bd1d SHA512 b6fe64f1acff8805bb30a01759a2f12536b6864ec4382ebc4c366a89a58e0a309136b49404007cb6df83800b0cfc33dd21c94fa7a5390a75760e1dd89da2198b WHIRLPOOL 72e20b29efb558322c657f6c98a4fd1c86c5e37fad1347e20d7cf685dca3136b18d375b93cf0932556f44a3e7ba993715dc3153320134d87847fab5a7bd42098
+DIST json_tools-0.3.3.tar.gz 8093 SHA256 d651d10326447b7a039305661b0fa6c44bb54ca2313494e20dda1e4c8c63b7d6 SHA512 34bb34d52f7f230a13071a9a5c3de79f2c76de6b4a8ce60d0acb4447f68893faeb79ee9a98133ba72f1c1acebd9e8beb34dba0953242aee97799e8b97fcf6537 WHIRLPOOL 203666696b13d95b4c918c604c8b968ac1b64603f3559fec4251c2d80792c1d0674fd7a7a086e4536110f241c93fe28457921023183daa3697bf7deee352a11f
 EBUILD json-tools-0.3.2.ebuild 876 SHA256 d424eef4a42ec275921079b373867240db7cf7f0b5dda09eca37b8a596b9d16d SHA512 c0c10a17150a8f7ec2ea42737c41bad54b703bd111d4d303f8cdf77e0ddd1fb86e9ee03edcb2aa17d22b1e8182a5b2ae2fad76ce23c2260bc8c4c158f5b9fbd0 WHIRLPOOL 238068542af4bc6b7747663cc2568e6fd2d62399466e1e3e491ccc68481feb0fe9658c2deef6a30d8fb4b2dc327756373f39db6cf19832c23ae59f813ff5308d
-MISC ChangeLog 399 SHA256 ced852df0f7f838f4f08b8788446d74398ea9b6008fcc1bd8e0138b24144d0cc SHA512 11a85f17007593a73ae18fe0e59fae6bc954ca5b97a92cfa0ce094faea03ff8785f0730dc76f096956394473a0269486ca1d9f6959486427c958defcbb40be89 WHIRLPOOL 620982bb947c7618886365a9e9b847093fe88998d74ad3afcaeb38a8195341073cd6fb35a682822edc71282e347746563538e603d79d6ffc3e4c8f3f8edba6c1
+EBUILD json-tools-0.3.3.ebuild 876 SHA256 935b908146f0ef4235c1db164c30fac93e8b69c61adb54ac78c001f0ea58c04b SHA512 4f9fdb98b2174fb3a6b61c76fe429d0d5c3c62ba24e20d7e638aad6333a1d172cbd944e154467ec1a2a4489aca2e468d6c6f1428d234c9c11b467be6f920dc96 WHIRLPOOL a76a76e2d86021ed36aada6094fb7ff4556f1bbee459e01b6d46f016255d489b0c70ef667577f70a0371262e2355a0d2e3c0a8296396c371bde10be0b1a60566
+MISC ChangeLog 524 SHA256 1eb5befb2a466d7065b647e40c6cd67f753145e8115d13e14c1e259d39414b4a SHA512 6f701b17d365d09ee5a1386f40a0e7b56ae0501c88d4e0e031812a326978da5059ca505813a15f2e8bf75d1ea9167c1c25becb39134768dae120248702949a0f WHIRLPOOL 376b719198a0804cccef41c81689f759aa9d0cbda2b0793724441becdbc155cfc56d609ce6c9fb1e372330348b417274171e99e8e07b0e67b456634a4f4f5ba1
 MISC metadata.xml 233 SHA256 99f350c1ce516e7bc5ff65ac2457ea1cc3b3ebf40ffd4a049c2eca2e1693616d SHA512 58ff644cfaf2c7eaa1c1581bbd3b398b3eaa9cd32b1625fde3e43f16002a6f3e311d06712dd1a08c1514bdf6bbef5cbcb226baaef1289d45d65bdd15221ff040 WHIRLPOOL dbcd908c327bb21f811c5a70e569e74ae9813619e4e96e369ca445fb90bd71af9dc284abe37d3a37fe86fbe404cbc1c15050b69f3e91ac76d36d6ab185f86139
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSVyjpAAoJEEqz6FtPBkyjnuUH+wfCtd9tIt84uQ4fdP2USkw/
-9DXXvr4xfHfD9MWzY4lBCHmLWDqHB+ALHZ48MQpzun6Jpytm1B8jwji8Niz5icgx
-80ZFljDkDbNcwX/rUDwyuCsHqvYRqd6DcqRXuR1671/YmrEyrge3544YpTM/zbko
-IpVx+oj9tzGdPn101yFVyuKqq9lEDo5gomCEcLuFdoDvGQZldwb5S1lXNUoHSrEq
-OfkQ8/dJptlllXrlG49VJu5P1P497JaweD8XWmlHN7DRathLAMPs4CQWb7UJ2xtS
-DmHwd+2d8URaAN2WTYrksYvdPwN730S5NCbtRcIk7hB0YeyOOzdlfJsilNeEdno=
-=U1G0
+iQEcBAEBCAAGBQJSs0R0AAoJEEqz6FtPBkyjxN4H/iRrXAyk+JCkIn24HDu7H7dg
+fdatA5d8Lt2nEM2Wpf8If63S1w8dcRA9h8lL/gMqhKsD7bIhEdo/JKsoDBxQds5M
+WmYdpiB75624bcH+uOGyTFvseYKlnySMbu1PgLPcNkudEVTMvudJW0QGBF9I+PtX
+RukoXEIrYCnSTp3pFUklTdo6CncCLiS+PpNhaclahygtFTL7EeMziLJ9GuSQTdaS
+0lh439Goaf88wAbDsdFDxuQzcdCdZ1frsqrfww+UaW2Zldv/JxKTi/30wt82B9xN
+1DLRzLgcAMqkC6YzJ+LYR9gHjs0AZ+Rsf4zkvkk1SbgxLuoKY5cOVlffdrl/P2c=
+=o+Ny
 -----END PGP SIGNATURE-----
