@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/json-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/json-tools/ChangeLog,v 1.1 2013/10/10 22:23:34 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/json-tools/ChangeLog,v 1.2 2013/12/19 19:09:37 radhermit Exp $
+
+*json-tools-0.3.3 (19 Dec 2013)
+
+  19 Dec 2013; Tim Harder <radhermit@gentoo.org> +json-tools-0.3.3.ebuild:
+  Version bump.
 
 *json-tools-0.3.2 (10 Oct 2013)
 
